# goit-web-homework-14

./: .example.env  README.md  alembic.ini  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/versions/: 3f4904fe549e_add_field_confirmed.py  7f758314b9a9_init.py
src/: schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
